@@ -1,3 +1,6 @@
+HEAD
+	+ EBox::RemoteServices::Subscription::Check::check recovers for
+	  any error raised on users checking
 3.2.5
 	+ DisasterRecoveryDomains can notify other models
 	+ Remove Disaster Recovery menu entry as it is managed by
